--- a/02 Python Setup/03 Installing VSCode.ipynb
+++ b/02 Python Setup/03 Installing VSCode.ipynb
@@ -29,7 +29,7 @@
     "    font-family: 'Poppins', sans-serif;\n",
     "    letter-spacing: 1px;\n",
     "  }\n",
-    "\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
     "  .container {\n",
     "    display: flex;\n",
     "    flex-direction: column;\n",
@@ -215,7 +215,7 @@
     "<div class=\"section-card\" id=\"toc0_\">\n",
     "  <h2>Table of Contents</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card toc-card green\">\n",
+    "    <div class=\"card toc-card blue\">\n",
     "      <h3>Contents</h3>\n",
     "      <ul>\n",
     "        <li><a href=\"#toc1_\">Installing VS Code</a>\n",
@@ -240,11 +240,11 @@
     "<div class=\"section-card\" id=\"toc1_\">\n",
     "  <h2>Installing VS Code</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
+    "    <div class=\"card image-card orange\">\n",
     "      <h3>Installation Overview</h3>\n",
     "      <img src=\"../images/vscode-install-path-mac.png\" alt=\"VS Code Installation\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\" id=\"toc1_1_\">\n",
+    "    <div class=\"card orange\" id=\"toc1_1_\">\n",
     "      <h3>MacOS Installation</h3>\n",
     "      <ul>\n",
     "        <li>Download Visual Studio Code from the official website.</li>\n",
@@ -263,7 +263,7 @@
     "      </ul>\n",
     "      <p>For more details, see <a href=\"https://code.visualstudio.com/docs/setup/linux\">Install Visual Studio Code on Linux</a>.</p>\n",
     "    </div>\n",
-    "    <div class=\"card purple\" id=\"toc1_3_\">\n",
+    "    <div class=\"card orange\" id=\"toc1_3_\">\n",
     "      <h3>WSL Installation</h3>\n",
     "      <ul>\n",
     "        <li>Install Windows Subsystem for Linux (WSL) and a Linux distribution.</li>\n",
@@ -273,7 +273,7 @@
     "      </ul>\n",
     "      <p>For more details, see <a href=\"https://code.visualstudio.com/docs/remote/wsl\">VS Code WSL Documentation</a>.</p>\n",
     "    </div>\n",
-    "    <div class=\"card red\" id=\"toc1_3_\">\n",
+    "    <div class=\"card orange\" id=\"toc1_3_\">\n",
     "      <h3>Windows Installation</h3>\n",
     "      <ul>\n",
     "        <li>Download the Visual Studio Code installer from the official website.</li>\n",
@@ -283,7 +283,7 @@
     "      </ul>\n",
     "      <p>For more details, see <a href=\"https://code.visualstudio.com/docs/setup/windows\">Install Visual Studio Code on Windows</a>.</p>\n",
     "    </div>\n",
-    "    <div class=\"card green\" id=\"toc1_3_1_\">\n",
+    "    <div class=\"card orange\" id=\"toc1_3_1_\">\n",
     "      <h3>Open a Remote Folder or Workspace (WSL)</h3>\n",
     "      <img src=\"../images/wsl-starting-notification.png\" alt=\"WSL Folder Opening\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "      <ul>\n",
@@ -302,11 +302,11 @@
     "<div class=\"section-card\" id=\"toc2_\">\n",
     "  <h2>How to Launch Visual Studio Code from Terminal</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
+    "    <div class=\"card image-card purple\">\n",
     "      <h3>Terminal Launch</h3>\n",
     "      <img src=\"../images/wsl-statusbar-indicator.png\" alt=\"VS Code Terminal Launch\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card purple\">\n",
     "      <h3>Steps to Launch</h3>\n",
     "      <ul>\n",
     "        <li>Ensure VS Code is installed.</li>\n",
@@ -314,7 +314,7 @@
     "        <li>Open a terminal and type <code>code .</code> to open the current directory as a workspace.</li>\n",
     "      </ul>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card purple\">\n",
     "      <h3>Difference: <code>code</code> vs <code>code .</code></h3>\n",
     "      <p><code>code</code> opens VS Code with a blank workspace; <code>code .</code> opens the current directory as the workspace.</p>\n",
     "    </div>\n",
@@ -333,18 +333,18 @@
     "      <h3>Jupyter Extension</h3>\n",
     "      <img src=\"../images/vscode-jupyter-ext.png\" alt=\"Jupyter Extension Installation\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>Overview</h3>\n",
     "      <p>The Jupyter extension allows working with Jupyter notebooks in VS Code for interactive data analysis and code experimentation.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>Installation Steps</h3>\n",
     "      <ul>\n",
     "        <li>Open VS Code and access the Extensions sidebar (Ctrl+Shift+X).</li>\n",
     "        <li>Search for \"Jupyter\" and install the Jupyter extension.</li>\n",
     "      </ul>\n",
     "    </div>\n",
-    "    <div class=\"card purple\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>Benefits</h3>\n",
     "      <p>Combines Jupyter’s interactive capabilities with VS Code’s editing environment, enhancing Python development.</p>\n",
     "    </div>\n",
