--- a/02 Python Setup/04 Getting Started with VSCode.ipynb
+++ b/02 Python Setup/04 Getting Started with VSCode.ipynb
@@ -29,7 +29,7 @@
     "    font-family: 'Poppins', sans-serif;\n",
     "    letter-spacing: 1px;\n",
     "  }\n",
-    "\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
     "  .container {\n",
     "    display: flex;\n",
     "    flex-direction: column;\n",
@@ -217,7 +217,7 @@
     "<div class=\"section-card\" id=\"toc0_\">\n",
     "  <h2>Table of Contents</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card toc-card green\">\n",
+    "    <div class=\"card toc-card blue\">\n",
     "      <h3>Contents</h3>\n",
     "      <ul>\n",
     "        <li><a href=\"#toc1_\">Opening VS Code in Different Directories and Files</a></li>\n",
@@ -238,7 +238,7 @@
     "<div class=\"section-card\" id=\"toc1_\">\n",
     "  <h2>Opening VS Code in Different Directories and Files</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card orange\">\n",
     "      <h3>Opening Directories</h3>\n",
     "      <ul>\n",
     "        <li>Use <code>File -> Open Folder...</code> or <code>Ctrl+K Ctrl+O</code> (Windows/Linux) / <code>Cmd+K Cmd+O</code> (Mac) to browse and open a folder.</li>\n",
@@ -260,15 +260,15 @@
     "<div class=\"section-card\" id=\"toc2_\">\n",
     "  <h2>Interface Tour</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
+    "    <div class=\"card image-card purple\">\n",
     "      <h3>VS Code Interface</h3>\n",
     "      <img src=\"../images/vscode-interface.png\" alt=\"VS Code Interface\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card purple\">\n",
     "      <h3>Editor</h3>\n",
     "      <p>The central area for writing and editing code, offering numerous functionalities to enhance coding.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card purple\">\n",
     "      <h3>Sidebar</h3>\n",
     "      <p>Located on the left, includes panels like Explorer for file navigation, Source Control for version control, and Extensions for managing add-ons.</p>\n",
     "    </div>\n",
@@ -276,7 +276,7 @@
     "      <h3>Status Bar</h3>\n",
     "      <p>At the bottom, displays file type, line/column numbers, and indentation settings.</p>\n",
     "    </div>\n",
-    "    <div class=\"card red\">\n",
+    "    <div class=\"card purple\">\n",
     "      <h3>Command Palette</h3>\n",
     "      <p>Access via <code>Ctrl+Shift+P</code> (Windows/Linux) or <code>Cmd+Shift+P</code> (Mac) to execute commands and access features.</p>\n",
     "    </div>\n",
@@ -287,13 +287,12 @@
     "<div class=\"section-card\" id=\"toc3_\">\n",
     "  <h2>Extensions</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>Overview</h3>\n",
     "      <p>Extensions are add-ons that enhance VS Code’s capabilities for various programming languages and workflows.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\" id=\"toc3_1_\">\n",
+    "    <div class=\"card green\" id=\"toc3_1_\">\n",
     "      <h3>Python Extension</h3>\n",
-    "      <img src=\"../images/vscode-python-ext.png\" alt=\"Python Extension\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "      <ul>\n",
     "        <li><strong>IntelliSense:</strong> Intelligent code completion for Python keywords, modules, classes, and custom objects.</li>\n",
     "        <li><strong>Code Linting:</strong> Catch errors and enforce coding standards with an integrated linter.</li>\n",
@@ -301,15 +300,16 @@
     "        <li><strong>Code Navigation:</strong> Use \"Go to Definition\" and \"Find All References\" for easy navigation.</li>\n",
     "        <li><strong>Interactive Python:</strong> Run code interactively in the integrated terminal.</li>\n",
     "      </ul>\n",
+    "      <img src=\"../images/vscode-python-ext.png\" alt=\"Python Extension\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card purple\" id=\"toc3_2_\">\n",
+    "    <div class=\"card green\" id=\"toc3_2_\">\n",
     "      <h3>Jupyter Extension</h3>\n",
-    "      <img src=\"../images/vscode-jupyter-ext.png\" alt=\"Jupyter Extension\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "      <ul>\n",
     "        <li><strong>Open and Edit Notebooks:</strong> Create and edit Jupyter notebooks within VS Code.</li>\n",
     "        <li><strong>Intelligent Editing:</strong> Use VS Code’s IntelliSense and editing features in notebooks.</li>\n",
     "        <li><strong>Kernel Management:</strong> Manage and switch between Python kernels for notebooks.</li>\n",
     "      </ul>\n",
+    "      <img src=\"../images/vscode-jupyter-ext.png\" alt=\"Jupyter Extension\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
@@ -318,7 +318,7 @@
     "<div class=\"section-card\" id=\"toc4_\">\n",
     "  <h2>Basic Editing</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card red\">\n",
     "      <h3>Basic Operations</h3>\n",
     "      <ul>\n",
     "        <li>Open a file with <code>File -> Open</code> or <code>Ctrl+O</code> (Windows/Linux) / <code>Cmd+O</code> (Mac).</li>\n",
