--- a/02 Python Setup/05 Package Manager.ipynb
+++ b/02 Python Setup/05 Package Manager.ipynb
@@ -234,7 +234,7 @@
     "<div class=\"section-card\" id=\"toc0_\">\n",
     "  <h2>Table of Contents</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card toc-card green\">\n",
+    "    <div class=\"card toc-card blue\">\n",
     "      <h3>Contents</h3>\n",
     "      <ul>\n",
     "        <li><a href=\"#toc1_\">What Is a Package Manager</a></li>\n",
@@ -252,11 +252,11 @@
     "<div class=\"section-card\" id=\"toc1_\">\n",
     "  <h2>What Is a Package Manager</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
+    "    <div class=\"card image-card orange\">\n",
     "      <h3>Overview</h3>\n",
     "      <img src=\"../images/packege.jpg\" alt=\"Package Manager\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card orange\">\n",
     "      <h3>Definition</h3>\n",
     "      <p>A package manager is a tool that automates installing, updating, configuring, and removing software packages, acting like a librarian to manage code libraries and tools.</p>\n",
     "    </div>\n",
@@ -264,7 +264,7 @@
     "      <h3>Packages</h3>\n",
     "      <p>Packages are bundles of code (e.g., NumPy for math, Pandas for data analysis) that add functionality to projects. Manual installation is tedious and error-prone.</p>\n",
     "    </div>\n",
-    "    <div class=\"card purple\">\n",
+    "    <div class=\"card orange\">\n",
     "      <h3>Functionality</h3>\n",
     "      <ul>\n",
     "        <li><strong>Simplifying Installation:</strong> One command fetches and installs everything.</li>\n",
@@ -273,7 +273,7 @@
     "        <li><strong>Supporting Environments:</strong> Isolates projects to prevent interference.</li>\n",
     "      </ul>\n",
     "    </div>\n",
-    "    <div class=\"card red\">\n",
+    "    <div class=\"card orange\">\n",
     "      <h3>Examples</h3>\n",
     "      <p>Examples include pip (for Python), npm (for JavaScript), and conda (a versatile manager).</p>\n",
     "    </div>\n",
@@ -284,15 +284,15 @@
     "<div class=\"section-card\" id=\"toc2_\">\n",
     "  <h2>How Package Managers Work</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
+    "    <div class=\"card image-card purple\">\n",
     "      <h3>Overview</h3>\n",
     "      <img src=\"https://geekflare.com/wp-content/uploads/2023/09/7-package-manager-functions.png\" alt=\"How Package Managers Work\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card purple\">\n",
     "      <h3>Packages</h3>\n",
     "      <p>Packages are external libraries or tools (e.g., for data handling or plotting) that extend Python’s capabilities, saving time with pre-built functionality.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card purple\">\n",
     "      <h3>Challenges</h3>\n",
     "      <p>Different projects may require different package versions, leading to conflicts if installed globally.</p>\n",
     "    </div>\n",
@@ -315,7 +315,7 @@
     "      <h3>Overview</h3>\n",
     "      <img src=\"../images/conda-python.jpg\" alt=\"Benefits of Package Manager\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>Benefits</h3>\n",
     "      <ul>\n",
     "        <li><strong>Dependency Management:</strong> Handles installation, upgrading, and removal of packages and dependencies, ensuring compatibility.</li>\n",
@@ -323,11 +323,11 @@
     "        <li><strong>Reproducibility:</strong> Specifies exact package versions for consistent project reproduction.</li>\n",
     "      </ul>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>Conda</h3>\n",
     "      <p>Conda is a robust package manager with strong dependency management and support for scientific computing and data science projects, unlike pip or poetry.</p>\n",
     "    </div>\n",
-    "    <div class=\"card purple\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>Miniconda</h3>\n",
     "      <p>Installing Miniconda provides Conda, enabling a tailored Python development environment for efficient package and environment management.</p>\n",
     "    </div>\n",
@@ -338,11 +338,11 @@
     "<div class=\"section-card\" id=\"toc4_\">\n",
     "  <h2>Package Repository</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
+    "    <div class=\"card image-card orange\">\n",
     "      <h3>Overview</h3>\n",
     "      <img src=\"../images/pip.webp\" alt=\"Package Repository\" style=\"max-width: 20vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card orange\">\n",
     "      <h3>Definition</h3>\n",
     "      <p>A package repository is a centralized storage for software packages, where developers publish packages for others to download and use.</p>\n",
     "    </div>\n",
@@ -350,7 +350,7 @@
     "      <h3>PyPI</h3>\n",
     "      <p>PyPI (Python Package Index) is a major repository hosting a vast collection of Python packages contributed by the community.</p>\n",
     "    </div>\n",
-    "    <div class=\"card purple\">\n",
+    "    <div class=\"card orange\">\n",
     "      <h3>Benefits</h3>\n",
     "      <p>Repositories like PyPI simplify discovering, installing, and updating packages, reducing dependency management effort.</p>\n",
     "    </div>\n",
@@ -361,11 +361,11 @@
     "<div class=\"section-card\" id=\"toc5_\">\n",
     "  <h2>Conda vs. Pip</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card red\">\n",
     "      <h3>Overview</h3>\n",
     "      <p>Conda is a cross-platform package manager for pre-built packages, while pip is Python’s default manager for installing from PyPI.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card red\">\n",
     "      <h3>Comparison Table</h3>\n",
     "      <table>\n",
     "        <tr>\n",
@@ -417,15 +417,15 @@
     "<div class=\"section-card\" id=\"toc6_\">\n",
     "  <h2>PyPI vs. Conda Forge</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>PyPI</h3>\n",
     "      <p>PyPI is the largest repository of Python packages, hosting an extensive collection contributed by developers worldwide, supporting binary distribution but not guaranteed for all packages.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>Conda Forge</h3>\n",
     "      <p>Conda Forge is a community-driven platform emphasizing pre-compiled binary packages for Python and non-Python dependencies, ensuring a robust environment.</p>\n",
     "    </div>\n",
-    "    <div class=\"card purple\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>Comparison Table</h3>\n",
     "      <table>\n",
     "        <tr>\n",
