--- a/02 Python Setup/06 Installing and Using Conda.ipynb
+++ b/02 Python Setup/06 Installing and Using Conda.ipynb
@@ -28,7 +28,7 @@
     "    font-family: 'Poppins', sans-serif;\n",
     "    letter-spacing: 1px;\n",
     "  }\n",
-    "\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
     "  .container {\n",
     "    display: flex;\n",
     "    flex-direction: column;\n",
@@ -129,6 +129,10 @@
     "    border-left-color: #ef5350;\n",
     "  }\n",
     "\n",
+    "  .card.pink {\n",
+    "    border-left-color:rgb(233, 98, 168);\n",
+    "  }\n",
+    "\n",
     "  .toc-card ul {\n",
     "    list-style-type: none;\n",
     "    padding-left: 0;\n",
@@ -216,7 +220,7 @@
     "<div class=\"section-card\" id=\"toc0_\">\n",
     "  <h2>Table of Contents</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card toc-card green\">\n",
+    "    <div class=\"card toc-card blue\">\n",
     "      <h3>Contents</h3>\n",
     "      <ul>\n",
     "        <li><a href=\"#toc1_\">Understanding the Differences: Conda, Miniconda, and Anaconda</a></li>\n",
@@ -248,11 +252,11 @@
     "<div class=\"section-card\" id=\"toc1_\">\n",
     "  <h2>Understanding the Differences: Conda, Miniconda, and Anaconda</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
+    "    <div class=\"card image-card orange\">\n",
     "      <h3>Overview</h3>\n",
     "      <img src=\"../images/conda-anaconda-workbench.png\" alt=\"Conda Differences\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card orange\">\n",
     "      <h3>Conda</h3>\n",
     "      <p>Conda is the package manager at the core of Miniconda and Anaconda. It installs, updates, and manages packages and dependencies, supporting multiple platforms and languages.</p>\n",
     "    </div>\n",
@@ -260,7 +264,7 @@
     "      <h3>Miniconda</h3>\n",
     "      <p>Miniconda is a minimal version of Anaconda, including only Conda and essential dependencies for a lightweight, customizable installation.</p>\n",
     "    </div>\n",
-    "    <div class=\"card purple\">\n",
+    "    <div class=\"card orange\">\n",
     "      <h3>Anaconda</h3>\n",
     "      <p>Anaconda is a distribution including Conda and pre-installed Python packages, data science libraries, and tools, tailored for scientific computing and machine learning.</p>\n",
     "    </div>\n",
@@ -271,11 +275,11 @@
     "<div class=\"section-card\" id=\"toc2_\">\n",
     "  <h2>Why Prefer Miniconda</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card purple\">\n",
     "      <h3>Customizability</h3>\n",
     "      <p>Miniconda’s minimalistic approach allows installing only needed packages, ensuring lightweight and efficient environments.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card purple\">\n",
     "      <h3>Reduced Disk Space</h3>\n",
     "      <p>Miniconda consumes less disk space than Anaconda, ideal for systems with limited storage or multiple environments.</p>\n",
     "    </div>\n",
@@ -294,15 +298,15 @@
     "      <h3>Overview</h3>\n",
     "      <img src=\"../images/miniconda.svg\" alt=\"Miniconda Installation\" style=\"max-width: 30vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\" id=\"toc3_1_\">\n",
+    "    <div class=\"card green\" id=\"toc3_1_\">\n",
     "      <h3>Windows Installation</h3>\n",
     "      <p>Download the Miniconda installer from the official website, run it, follow the wizard, and add Miniconda to the PATH during installation.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\" id=\"toc3_2_\">\n",
+    "    <div class=\"card green\" id=\"toc3_2_\">\n",
     "      <h3>Linux and WSL Installation</h3>\n",
     "      <p>Download the installer script, run <code>bash Miniconda3-latest-Linux-x86_64.sh</code>, follow prompts, and add to PATH by restarting the terminal.</p>\n",
     "    </div>\n",
-    "    <div class=\"card purple\" id=\"toc3_3_\">\n",
+    "    <div class=\"card green\" id=\"toc3_3_\">\n",
     "      <h3>macOS Installation</h3>\n",
     "      <p>Download the installer script, run <code>bash Miniconda3-latest-MacOSX-x86_64.sh</code>, follow prompts, and add to PATH by restarting the terminal.</p>\n",
     "    </div>\n",
@@ -313,24 +317,24 @@
     "<div class=\"section-card\" id=\"toc4_\">\n",
     "  <h2>Conda Environments</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
+    "    <div class=\"card image-card pink\">\n",
     "      <h3>Overview</h3>\n",
     "      <img src=\"../images/how-conda-works.png\" alt=\"How Conda Works\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\" id=\"toc4_1_\">\n",
+    "    <div class=\"card pink\" id=\"toc4_1_\">\n",
     "      <h3>Creating a New Environment</h3>\n",
     "      <p>Use <code>conda create -n my_env python=3.8</code> to create an environment with a specific Python version.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\" id=\"toc4_2_\">\n",
+    "    <div class=\"card pink\" id=\"toc4_2_\">\n",
     "      <h3>Activating and Deactivating Environments</h3>\n",
     "      <p>Use <code>conda activate my_env</code> to activate and <code>conda deactivate</code> to deactivate an environment.</p>\n",
     "      <img src=\"../images/conda-activate.jpeg\" alt=\"Conda Activate\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card purple\" id=\"toc4_3_\">\n",
+    "    <div class=\"card pink\" id=\"toc4_3_\">\n",
     "      <h3>Listing Environments and Packages</h3>\n",
     "      <p>Use <code>conda env list</code> for environments and <code>conda list</code> for packages in the active environment.</p>\n",
     "    </div>\n",
-    "    <div class=\"card red\" id=\"toc4_4_\">\n",
+    "    <div class=\"card pink\" id=\"toc4_4_\">\n",
     "      <h3>Removing Environments</h3>\n",
     "      <p>Use <code>conda env remove -n my_env</code> to remove an environment.</p>\n",
     "    </div>\n",
@@ -341,7 +345,7 @@
     "<div class=\"section-card\" id=\"toc5_\">\n",
     "  <h2>Installing and Managing Packages</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card blue\" id=\"toc5_1_\">\n",
+    "    <div class=\"card orange\" id=\"toc5_1_\">\n",
     "      <h3>Installing Packages</h3>\n",
     "      <p>Use <code>conda install PACKAGE_NAME</code> or <code>conda install PACKAGE_NAME=VERSION</code> to install packages or specific versions.</p>\n",
     "    </div>\n",
@@ -349,11 +353,11 @@
     "      <h3>Installing Packages with pip</h3>\n",
     "      <p>Use <code>pip install PACKAGE_NAME</code> for packages not available through Conda, though Conda is preferred for dependencies.</p>\n",
     "    </div>\n",
-    "    <div class=\"card purple\" id=\"toc5_2_\">\n",
+    "    <div class=\"card orange\" id=\"toc5_2_\">\n",
     "      <h3>Updating Packages</h3>\n",
     "      <p>Use <code>conda update PACKAGE_NAME</code> for a package or <code>conda update --all</code> for all packages.</p>\n",
     "    </div>\n",
-    "    <div class=\"card red\" id=\"toc5_3_\">\n",
+    "    <div class=\"card orange\" id=\"toc5_3_\">\n",
     "      <h3>Removing Packages</h3>\n",
     "      <p>Use <code>conda remove PACKAGE_NAME</code> to remove a package.</p>\n",
     "    </div>\n",
@@ -364,11 +368,11 @@
     "<div class=\"section-card\" id=\"toc6_\">\n",
     "  <h2>Environment Files</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card blue\" id=\"toc6_1_\">\n",
+    "    <div class=\"card red\" id=\"toc6_1_\">\n",
     "      <h3>Exporting an Environment</h3>\n",
     "      <p>Use <code>conda env export > environment.yml</code> to export the environment configuration.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\" id=\"toc6_2_\">\n",
+    "    <div class=\"card red\" id=\"toc6_2_\">\n",
     "      <h3>Creating an Environment from a File</h3>\n",
     "      <p>Use <code>conda env create -f environment.yml</code> to create an environment from a file.</p>\n",
     "    </div>\n",
