--- a/02 Python Setup/07 Using Conda in VSCode.ipynb
+++ b/02 Python Setup/07 Using Conda in VSCode.ipynb
@@ -29,7 +29,7 @@
     "    font-family: 'Poppins', sans-serif;\n",
     "    letter-spacing: 1px;\n",
     "  }\n",
-    "\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
     "  .container {\n",
     "    display: flex;\n",
     "    flex-direction: column;\n",
@@ -129,6 +129,9 @@
     "  .card.red {\n",
     "    border-left-color: #ef5350;\n",
     "  }\n",
+    "  .card.pink {\n",
+    "    border-left-color:rgb(247, 100, 208);\n",
+    "  }\n",
     "\n",
     "  .toc-card ul {\n",
     "    list-style-type: none;\n",
@@ -217,7 +220,7 @@
     "<div class=\"section-card\" id=\"toc0_\">\n",
     "  <h2>Table of Contents</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card toc-card green\">\n",
+    "    <div class=\"card toc-card blue\">\n",
     "      <h3>Contents</h3>\n",
     "      <ul>\n",
     "        <li><a href=\"#toc1_\">Installing the VS Code Extension</a></li>\n",
@@ -233,11 +236,11 @@
     "<div class=\"section-card\" id=\"toc1_\">\n",
     "  <h2>Installing the VS Code Extension</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
+    "    <div class=\"card image-card orange\">\n",
     "      <h3>Overview</h3>\n",
     "      <img src=\"../images/vscode-python-ext.png\" alt=\"Python Extension\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card orange\">\n",
     "      <h3>Steps</h3>\n",
     "      <ul>\n",
     "        <li>Launch VS Code.</li>\n",
@@ -252,11 +255,11 @@
     "<div class=\"section-card\" id=\"toc2_\">\n",
     "  <h2>Selecting a Conda Environment in VS Code</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card purple\">\n",
     "      <h3>Interpreters</h3>\n",
     "      <p>Global interpreters are system-wide; Conda interpreters are isolated for project-specific dependencies.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card purple\">\n",
     "      <h3>Steps</h3>\n",
     "      <ul>\n",
     "        <li>Open your python project in VS Code.</li>\n",
@@ -274,7 +277,7 @@
     "<div class=\"section-card\" id=\"toc3_\">\n",
     "  <h2>Activating a Conda Environment in the Integrated Terminal</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card red\">\n",
     "      <h3>Steps</h3>\n",
     "      <p>Open the terminal (<code>Ctrl+`</code>) and use <code>conda activate myenv</code> to activate the environment, shown in the prompt (e.g., <code>(myenv) user@machine:~$</code>).</p>\n",
     "      <img src=\"../images/vscode-terminal-env.png\" alt=\"Terminal Environment\" style=\"max-width: 50vw; height: auto; display: block; margin: 30px auto; border-radius: 5px;\">\n",
@@ -286,7 +289,7 @@
     "<div class=\"section-card\" id=\"toc4_\">\n",
     "  <h2>Using Jupyter Lab in VS Code</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>Steps</h3>\n",
     "      <ul>\n",
     "        <li>Open VS Code and use Command Palette (<code>Ctrl+Shift+P</code>).</li>\n",
