--- a/03 Data Type/11 Operators and Expresssions.ipynb
+++ b/03 Data Type/11 Operators and Expresssions.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "4.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,6 +348,8 @@
     "  .card:hover {transform: translateY(-6px);box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);}\n",
     "  .card {transition: transform 0.3s ease, box-shadow 0.3s ease;}\n",
     "  .container > .card:last-child { margin-bottom: 2rem; }\n",
+    "  ol { padding-left: 1.25rem; margin-bottom: 0; color: #dcdcdc; font-size: 0.95rem; }\n",
+    "  li { margin-bottom: 0.5rem; }\n",
     "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
     "  @media (max-width: 768px) { .section-card { padding: 1.25rem; max-width: 95vw; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } h2 { font-size: 1.4rem; } p { font-size: 0.9rem; } }\n",
     "</style>\n",
@@ -356,6 +358,16 @@
     "  <div class=\"container\">\n",
     "    <div class=\"card\">\n",
     "       <p>Assignment operators assign values to variables. The basic operator is <code>=</code>. Compound operators (like <code>+=</code> or <code>*=</code>) perform an operation and assign the result in a single, concise step.</p>\n",
+    "       <ol>\n",
+    "        <li><strong>Equal(=)</strong>: Assigns right-side value to left-side variable — e.g., <code>x = 5</code>.</li>\n",
+    "        <li><strong>Add and assign (+=)</strong>: Adds right operand to left, assigns result — e.g., <code>x += 3</code> → <code>x = x + 3</code>.</li>\n",
+    "        <li><strong>Subtract and assign (-=)</strong>: Subtracts right operand from left, assigns result — e.g., <code>x -= 2</code> → <code>x = x - 2</code>.</li>\n",
+    "        <li><strong>Multiply and assign (*=)</strong>: Multiplies left by right, assigns result — e.g., <code>x *= 4</code> → <code>x = x * 4</code>.</li>\n",
+    "        <li><strong>Divide and assign (/=)</strong>: Divides left by right, assigns result — e.g., <code>x /= 2</code> → <code>x = x / 2</code>.</li>\n",
+    "        <li><strong>Floor divide and assign (//=)</strong>: Floor-divides left by right, assigns result — e.g., <code>x //= 3</code> → <code>x = x // 3</code>.</li>\n",
+    "        <li><strong>Modulus and assign (%=)</strong>: Takes modulus, assigns remainder — e.g., <code>x %= 4</code> → <code>x = x % 4</code>.</li>\n",
+    "        <li><strong>Exponent and assign (**=)</strong>: Raises left to power of right, assigns result — e.g., <code>x **= 2</code> → <code>x = x ** 2</code>.</li>\n",
+    "      </ol>\n",
     "       <p style=\"margin-bottom:0;\">For example, <code>x += 3</code> is a more compact way of writing <code>x = x + 3</code>.</p>\n",
     "    </div>\n",
     "  </div>\n",
@@ -364,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +395,7 @@
        "8"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +418,10 @@
     "  .card {transition: transform 0.3s ease, box-shadow 0.3s ease;}\n",
     "  .container > .card:last-child { margin-bottom: 2rem; }\n",
     "  .card.blue { border-left-color: #29b6f6; }\n",
+    "  code{font-size: 0.95rem;line-height: 1.5; }\n",
     "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
+    "  ul { padding-left: 1.25rem; margin-bottom: 0; color: #dcdcdc; font-size: 0.95rem; }\n",
+    "  li { margin-bottom: 0.5rem; }\n",
     "  @media (max-width: 768px) { .section-card { padding: 1.25rem; max-width: 95vw; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } h2 { font-size: 1.4rem; } p { font-size: 0.9rem; } }\n",
     "</style>\n",
     "<div class=\"section-card\" id=\"toc5_\">\n",
@@ -414,6 +429,10 @@
     "  <div class=\"container\">\n",
     "    <div class=\"card blue\">\n",
     "      <p>Membership operators (<code>in</code>, <code>not in</code>) test if a value exists within a sequence (like a list or string), providing a quick way to check for inclusion.</p>\n",
+    "      <ul>\n",
+    "        <li><strong>in</strong>: Returns <code>True</code> if a value exists in the sequence — e.g., <code>'h' in 'hello'</code> → <code>True</code>.</li>\n",
+    "        <li><strong>not in</strong>: Returns <code>True</code> if a value does *not* exist in the sequence — e.g., <code>'a' not in 'hello'</code> → <code>True</code>.</li>\n",
+    "      </ul>\n",
     "      <p style=\"margin-bottom:0;\">They are frequently used in conditional logic to make decisions based on whether an item is present in a collection.</p>\n",
     "    </div>\n",
     "  </div>\n",
@@ -422,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +450,7 @@
        "False"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +470,7 @@
        "False"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +662,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -657,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
