--- a/03 Data Type/14 Basic String Operations.ipynb
+++ b/03 Data Type/14 Basic String Operations.ipynb
@@ -58,8 +58,8 @@
     "      <ul>\n",
     "        <li><a href=\"#toc1_\">Concatenating Strings</a></li>\n",
     "        <li><a href=\"#toc2_\">Replicating Strings using Repetition</a></li>\n",
-    "        <li><a href=\"#toc3_\">Checking for Substrings with `in`</a></li>\n",
-    "        <li><a href=\"#toc4_\">Finding the Length of a String with `len()`</a></li>\n",
+    "        <li><a href=\"#toc3_\">Checking for Substrings with <code>in</code></a></li>\n",
+    "        <li><a href=\"#toc4_\">Finding the Length of a String with <code>len()</code></a></li>\n",
     "        <li><a href=\"#toc5_\">Accessing Characters using Indexing</a></li>\n",
     "        <li><a href=\"#toc6_\">String Slicing</a>\n",
     "          <ul><li><a href=\"#toc6_1_\">Specifying a Stride in a String Slice</a></li></ul>\n",
@@ -104,8 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_name = \"Mohammad\"\n",
-    "last_name = \"Amiri\"\n",
+    "first_name = \"Ali\"\n",
+    "last_name = \"Alavi\"\n",
     "full_name = first_name + \" \" + last_name"
    ]
   },
@@ -117,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "'Mohammad Amiri'"
+       "'Ali Alavi'"
       ]
      },
      "execution_count": 2,
@@ -206,7 +206,7 @@
     "  @media (max-width: 768px) { h1 { font-size: 2rem; } .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } .section-card h2 { font-size: 1.4rem; } p { font-size: 0.9rem; } }\n",
     "</style>\n",
     "<div class=\"section-card\" id=\"toc3_\">\n",
-    "  <h2>Checking for Substrings with `in`</h2>\n",
+    "  <h2>Checking for Substrings with <code>in</code></h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card red\">\n",
     "      <p>The <code>in</code> operator checks if a substring exists within a larger string, returning <code>True</code> or <code>False</code>. The <code>not in</code> operator does the opposite.</p>\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
     "  @media (max-width: 768px) { h1 { font-size: 2rem; } .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } .section-card h2 { font-size: 1.4rem; } p { font-size: 0.9rem; } }\n",
     "</style>\n",
     "<div class=\"section-card\" id=\"toc4_\">\n",
-    "  <h2>Finding the Length of a String with `len()`</h2>\n",
+    "  <h2>Finding the Length of a String with <code>len()</code></h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card green\">\n",
     "      <p style=\"margin-bottom:0;\">The built-in <code>len()</code> function returns the number of characters in a string.</p>\n",
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "13"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "'I'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "'e'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -399,10 +399,10 @@
      "evalue": "string index out of range",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43ms\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m12\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m s[\u001b[38;5;241m12\u001b[39m]\n",
+      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
      ]
     }
    ],
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "'tel'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,8 +474,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also use negative indices in slicing:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +491,7 @@
        "'gen'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,29 +501,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "  * { box-sizing: border-box; }\n",
+    "  h1 { width: 100%; text-align: center; color: #ffffff; font-size: 2.8rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card { background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70)); border-radius: 15px; padding: 2rem; margin: 0 auto 2.5rem; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); width: 100%; max-width: min(1200px, 95vw); }\n",
+    "  .section-card h2, .card h3 { color: #ffffff; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card h2 { text-align: center; font-size: 1.8rem; margin-bottom: 1.5rem; }\n",
+    "  .card h3 { font-size: 1.3rem; margin-bottom: 0.75rem; font-weight: bold; }\n",
+    "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
+    "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid transparent; width: min(1000px, 90vw); margin: 0 auto 1.25rem; }\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
+    "  .card.orange { border-left-color: #ffa726; }\n",
+    "  .card:hover {transform: translateY(-6px);box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);}\n",
+    "  .card {transition: transform 0.3s ease, box-shadow 0.3s ease;}\n",
+    "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
+    "  @media (max-width: 768px) { h1 { font-size: 2rem; } .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } .section-card h2 { font-size: 1.4rem; } .card h3 { font-size: 1.2rem; } p { font-size: 0.9rem; } }\n",
+    "</style>\n",
+    "<div class=\"section-card\">\n",
+    "  <div class=\"container\">\n",
+    "    <div class=\"card orange\" id=\"toc6_1_\">\n",
+    "      <h3>Specifying a Stride</h3>\n",
+    "      <p>You can add a third index, the stride or step, to skip characters: <code>string[start:stop:step]</code>. A common trick is to use a step of <code>-1</code> to reverse a string.</p>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = '12345' * 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ecnegiletI'"
+       "'11111'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s[::-1] # Reverse the string"
+    "s[::5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'55555'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[::-5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To reverse a string, a common approach is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5432154321543215432154321'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[::-1]"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "maa",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -530,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
