--- a/03 Data Type/19 Composite Data Types.ipynb
+++ b/03 Data Type/19 Composite Data Types.ipynb
@@ -60,18 +60,6 @@
     "      <h2>1. List</h2>\n",
     "      <p><strong>Lists</strong> are versatile, ordered collections that can hold items of different data types. They are mutable (changeable) and are defined with square brackets <code>[]</code>.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
-    "      <h2>2. Tuples</h2>\n",
-    "      <p><strong>Tuples</strong> are ordered collections similar to lists, but they are <strong>immutable</strong> (cannot be changed after creation). They are defined with parentheses <code>()</code> and are useful for data that should not be altered.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card purple\">\n",
-    "      <h2>3. Sets</h2>\n",
-    "      <p><strong>Sets</strong> are unordered collections of unique elements (no duplicates). They are mutable and support mathematical operations like union and intersection. Sets are defined with curly brackets <code>{}</code>.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card red\">\n",
-    "      <h2>4. Dictionaries</h2>\n",
-    "      <p><strong>Dictionaries</strong> are unordered collections of key-value pairs. They are mutable and defined with curly brackets <code>{}</code>, with items listed as <code>key: value</code>.</p>\n",
-    "    </div>\n",
     "  </div>\n",
     "</div>"
    ]
@@ -98,6 +86,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "  * { box-sizing: border-box; }\n",
+    "  h1 { width: 100%; text-align: center; color: #ffffff; font-size: 2.8rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card { background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70)); border-radius: 15px; padding: 2rem; margin: 0 auto 2.5rem; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); width: 100%; max-width: min(1200px, 95vw); }\n",
+    "  .section-card h2 { text-align: center; color: #ffffff; font-size: 1.8rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
+    "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid transparent; width: min(1000px, 90vw); margin: 0 auto 1.25rem; transition: transform 0.3s ease, box-shadow 0.3s ease; }\n",
+    "  .card:hover { transform: translateY(-6px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); }\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
+    "  .card.blue { border-left-color: #29b6f6; }\n",
+    "  .card.orange { border-left-color: #ffa726; }\n",
+    "  .card.purple { border-left-color: #ba68c8; }\n",
+    "  .card.red { border-left-color: #ef5350; }\n",
+    "  .card h2 { text-align: left; font-size: 1.5rem; margin-bottom: 1rem; }\n",
+    "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
+    "  @media (max-width: 768px) { h1 { font-size: 2rem; } .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } .section-card h2 { font-size: 1.4rem; } .card h2 { font-size: 1.3rem; } p { font-size: 0.9rem; } }\n",
+    "</style>\n",
+    "<div class=\"section-card\">\n",
+    "  <div class=\"container\">\n",
+    "    <div class=\"card orange\">\n",
+    "      <h2>2. Tuples</h2>\n",
+    "      <p><strong>Tuples</strong> are ordered collections similar to lists, but they are <strong>immutable</strong> (cannot be changed after creation). They are defined with parentheses <code>()</code> and are useful for data that should not be altered.</p>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -119,6 +138,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "  * { box-sizing: border-box; }\n",
+    "  h1 { width: 100%; text-align: center; color: #ffffff; font-size: 2.8rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card { background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70)); border-radius: 15px; padding: 2rem; margin: 0 auto 2.5rem; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); width: 100%; max-width: min(1200px, 95vw); }\n",
+    "  .section-card h2 { text-align: center; color: #ffffff; font-size: 1.8rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
+    "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid transparent; width: min(1000px, 90vw); margin: 0 auto 1.25rem; transition: transform 0.3s ease, box-shadow 0.3s ease; }\n",
+    "  .card:hover { transform: translateY(-6px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); }\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
+    "  .card.blue { border-left-color: #29b6f6; }\n",
+    "  .card.orange { border-left-color: #ffa726; }\n",
+    "  .card.purple { border-left-color: #ba68c8; }\n",
+    "  .card.red { border-left-color: #ef5350; }\n",
+    "  .card h2 { text-align: left; font-size: 1.5rem; margin-bottom: 1rem; }\n",
+    "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
+    "  @media (max-width: 768px) { h1 { font-size: 2rem; } .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } .section-card h2 { font-size: 1.4rem; } .card h2 { font-size: 1.3rem; } p { font-size: 0.9rem; } }\n",
+    "</style>\n",
+    "<div class=\"section-card\">\n",
+    "  <div class=\"container\">\n",
+    "    <div class=\"card purple\">\n",
+    "      <h2>3. Sets</h2>\n",
+    "      <p><strong>Sets</strong> are unordered collections of unique elements (no duplicates). They are mutable and support mathematical operations like union and intersection. Sets are defined with curly brackets <code>{}</code>.</p>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -137,6 +187,37 @@
    "source": [
     "# Example of a set\n",
     "{1, 2, \"Python\", 4.0}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "  * { box-sizing: border-box; }\n",
+    "  h1 { width: 100%; text-align: center; color: #ffffff; font-size: 2.8rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card { background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70)); border-radius: 15px; padding: 2rem; margin: 0 auto 2.5rem; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); width: 100%; max-width: min(1200px, 95vw); }\n",
+    "  .section-card h2 { text-align: center; color: #ffffff; font-size: 1.8rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
+    "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid transparent; width: min(1000px, 90vw); margin: 0 auto 1.25rem; transition: transform 0.3s ease, box-shadow 0.3s ease; }\n",
+    "  .card:hover { transform: translateY(-6px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); }\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
+    "  .card.blue { border-left-color: #29b6f6; }\n",
+    "  .card.orange { border-left-color: #ffa726; }\n",
+    "  .card.purple { border-left-color: #ba68c8; }\n",
+    "  .card.red { border-left-color: #ef5350; }\n",
+    "  .card h2 { text-align: left; font-size: 1.5rem; margin-bottom: 1rem; }\n",
+    "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
+    "  @media (max-width: 768px) { h1 { font-size: 2rem; } .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } .section-card h2 { font-size: 1.4rem; } .card h2 { font-size: 1.3rem; } p { font-size: 0.9rem; } }\n",
+    "</style>\n",
+    "<div class=\"section-card\">\n",
+    "  <div class=\"container\">\n",
+    "    <div class=\"card red\">\n",
+    "      <h2>4. Dictionaries</h2>\n",
+    "      <p><strong>Dictionaries</strong> are unordered collections of key-value pairs. They are mutable and defined with curly brackets <code>{}</code>, with items listed as <code>key: value</code>.</p>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>"
    ]
   },
   {
