--- a/03 Data Type/20 Lists.ipynb
+++ b/03 Data Type/20 Lists.ipynb
@@ -35,7 +35,14 @@
     "       <img src=\"../images/list.png\" alt=\"Python List Diagram\">\n",
     "    </div>\n",
     "    <div class=\"card green\">\n",
+    "    <strong>When to Use Lists?</strong>\n",
     "      <p style=\"margin-bottom:0;\">Use lists when you need an ordered sequence that you expect to modify, access by position, or that contains mixed data types.</p>\n",
+    "      <ul>\n",
+    "        <li><strong>Variable Data</strong>: Choose lists when your collection needs to change — they’re mutable and support adding, removing, or modifying elements.</li>\n",
+    "        <li><strong>Accessible by Index</strong>: Lists allow fast access and modification via numeric indices — ideal when position matters.</li>\n",
+    "        <li><strong>Mixed Data Types</strong>: Lists can hold elements of different types — no restriction on homogeneity.</li>\n",
+    "        <li><strong>Simple Iteration</strong>: Their ordered structure makes lists perfect for straightforward, sequential iteration.</li>\n",
+    "      </ul>\n",
     "    </div>\n",
     "  </div>\n",
     "</div>"
@@ -71,16 +78,11 @@
     "            <li><a href=\"#toc1_1_\">Syntax for List Creation</a></li>\n",
     "            <li><a href=\"#toc1_2_\">Creating Empty Lists</a></li>\n",
     "            <li><a href=\"#toc1_3_\">Lists From Other Data Types</a></li>\n",
-    "            <li><a href=\"#toc1_4_\">Creating Lists with `*` Operator</a></li>\n",
+    "            <li><a href=\"#toc1_4_\">Creating Lists with <code>*</code> Operator</a></li>\n",
     "            <li><a href=\"#toc1_5_\">Creating Lists with Range</a></li>\n",
     "          </ul>\n",
     "        </li>\n",
     "        <li><a href=\"#toc2_\">Using Built-in Functions with Lists</a>\n",
-    "          <ul>\n",
-    "            <li><a href=\"#toc2_1_\">`len()`</a></li>\n",
-    "            <li><a href=\"#toc2_2_\">`max()` and `min()`</a></li>\n",
-    "            <li><a href=\"#toc2_3_\">`sum()`</a></li>\n",
-    "          </ul>\n",
     "        </li>\n",
     "        <li><a href=\"#toc3_\">Conclusion</a></li>\n",
     "      </ul>\n",
@@ -128,6 +130,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "  * { box-sizing: border-box; }\n",
+    "  h1 { width: 100%; text-align: center; color: #ffffff; font-size: 2.8rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card { background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70)); border-radius: 15px; padding: 2rem; margin: 0 auto 2.5rem; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); width: 100%; max-width: min(1200px, 95vw); }\n",
+    "  .section-card h2, .card h3 { color: #ffffff; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card h2 { text-align: center; font-size: 1.8rem; margin-bottom: 1.5rem; }\n",
+    "  .card h3 { font-size: 1.3rem; margin-bottom: 0.75rem; font-weight: bold; }\n",
+    "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
+    "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid transparent; width: min(1000px, 90vw); margin: 0 auto 1.25rem; transition: transform 0.3s ease, box-shadow 0.3s ease; }\n",
+    "  .card:hover { transform: translateY(-6px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); }\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
+    "  .card.orange { border-left-color: #ffa726; }\n",
+    "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
+    "  blockquote { border-left: 3px solid #66bb6a; padding-left: 1rem; margin-left: 0; color: #f0f0f0; font-style: italic; }\n",
+    "  @media (max-width: 768px) { h1 { font-size: 2rem; } .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } .section-card h2 { font-size: 1.4rem; } p { font-size: 0.9rem; } }\n",
+    "</style>\n",
+    "<div class=\"section-card\">\n",
+    "  <div class=\"container\">\n",
+    "    <div class=\"card orange\" id=\"toc1_1_\">\n",
+    "      <h3>Syntax for List Creation</h3>\n",
+    "      <p>The simplest way is to place items inside square brackets: <code>[1, 'Python', 3.14]</code>.</p>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A list of integers\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "numbers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -147,6 +201,108 @@
     "# A list containing mixed data types\n",
     "mixed_list = [1, 'Python', 3.14, [2, 4, 6]]\n",
     "mixed_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "  * { box-sizing: border-box; }\n",
+    "  h1 { width: 100%; text-align: center; color: #ffffff; font-size: 2.8rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card { background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70)); border-radius: 15px; padding: 2rem; margin: 0 auto 2.5rem; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); width: 100%; max-width: min(1200px, 95vw); }\n",
+    "  .section-card h2, .card h3 { color: #ffffff; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card h2 { text-align: center; font-size: 1.8rem; margin-bottom: 1.5rem; }\n",
+    "  .card h3 { font-size: 1.3rem; margin-bottom: 0.75rem; font-weight: bold; }\n",
+    "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
+    "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid transparent; width: min(1000px, 90vw); margin: 0 auto 1.25rem; transition: transform 0.3s ease, box-shadow 0.3s ease; }\n",
+    "  .card:hover { transform: translateY(-6px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); }\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
+    "  .card.orange { border-left-color: #ffa726; }\n",
+    "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
+    "  blockquote { border-left: 3px solid #66bb6a; padding-left: 1rem; margin-left: 0; color: #f0f0f0; font-style: italic; }\n",
+    "  @media (max-width: 768px) { h1 { font-size: 2rem; } .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } .section-card h2 { font-size: 1.4rem; } p { font-size: 0.9rem; } }\n",
+    "</style>\n",
+    "<div class=\"section-card\">\n",
+    "  <div class=\"container\">\n",
+    "    <div class=\"card orange\" id=\"toc1_2_\">\n",
+    "      <h3>Creating Empty Lists</h3>\n",
+    "      <p>You can create an empty list with <code>[]</code> or <code>list()</code>, which is useful for populating data later.</p>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "empty_list = []\n",
+    "empty_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "empty_list = list()\n",
+    "empty_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "  * { box-sizing: border-box; }\n",
+    "  h1 { width: 100%; text-align: center; color: #ffffff; font-size: 2.8rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card { background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70)); border-radius: 15px; padding: 2rem; margin: 0 auto 2.5rem; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); width: 100%; max-width: min(1200px, 95vw); }\n",
+    "  .section-card h2, .card h3 { color: #ffffff; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card h2 { text-align: center; font-size: 1.8rem; margin-bottom: 1.5rem; }\n",
+    "  .card h3 { font-size: 1.3rem; margin-bottom: 0.75rem; font-weight: bold; }\n",
+    "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
+    "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid transparent; width: min(1000px, 90vw); margin: 0 auto 1.25rem; transition: transform 0.3s ease, box-shadow 0.3s ease; }\n",
+    "  .card:hover { transform: translateY(-6px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); }\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
+    "  .card.orange { border-left-color: #ffa726; }\n",
+    "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
+    "  blockquote { border-left: 3px solid #66bb6a; padding-left: 1rem; margin-left: 0; color: #f0f0f0; font-style: italic; }\n",
+    "  @media (max-width: 768px) { h1 { font-size: 2rem; } .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } .section-card h2 { font-size: 1.4rem; } p { font-size: 0.9rem; } }\n",
+    "</style>\n",
+    "<div class=\"section-card\">\n",
+    "  <div class=\"container\">\n",
+    "    <div class=\"card orange\" id=\"toc1_3_\">\n",
+    "      <h3>Lists From Other Data Types</h3>\n",
+    "      <p>The <code>list()</code> constructor can convert other iterables (like strings, tuples, or sets) into a list.</p>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>"
    ]
   },
   {
@@ -173,13 +329,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# From a tuple\n",
+    "tuple_to_list = list((1, 2, 3))\n",
+    "tuple_to_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# From a set - order of elements will be arbitrary\n",
+    "set_to_list = list({3, 1, 2})\n",
+    "set_to_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "  * { box-sizing: border-box; }\n",
+    "  h1 { width: 100%; text-align: center; color: #ffffff; font-size: 2.8rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card { background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70)); border-radius: 15px; padding: 2rem; margin: 0 auto 2.5rem; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); width: 100%; max-width: min(1200px, 95vw); }\n",
+    "  .section-card h2, .card h3 { color: #ffffff; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card h2 { text-align: center; font-size: 1.8rem; margin-bottom: 1.5rem; }\n",
+    "  .card h3 { font-size: 1.3rem; margin-bottom: 0.75rem; font-weight: bold; }\n",
+    "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
+    "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid transparent; width: min(1000px, 90vw); margin: 0 auto 1.25rem; transition: transform 0.3s ease, box-shadow 0.3s ease; }\n",
+    "  .card:hover { transform: translateY(-6px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); }\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
+    "  .card.orange { border-left-color: #ffa726; }\n",
+    "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
+    "  blockquote { border-left: 3px solid #66bb6a; padding-left: 1rem; margin-left: 0; color: #f0f0f0; font-style: italic; }\n",
+    "  @media (max-width: 768px) { h1 { font-size: 2rem; } .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } .section-card h2 { font-size: 1.4rem; } p { font-size: 0.9rem; } }\n",
+    "</style>\n",
+    "<div class=\"section-card\">\n",
+    "  <div class=\"container\">\n",
+    "    <div class=\"card orange\" id=\"toc1_4_\">\n",
+    "      <h3>Creating Lists with <code>*</code> Operator</h3>\n",
+    "      <p>Python also allows list initialization with repetitive elements using the multiplication, or <code>*</code>, operator:</p>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A list of ten zeroes\n",
+    "zero_list = [0] * 10"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[None, None, None, None, None, None, None, None, None, None]"
+       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]"
       ]
      },
      "execution_count": 9,
@@ -188,9 +428,38 @@
     }
    ],
    "source": [
-    "# A list of 10 None values\n",
-    "none_list = [None] * 10\n",
-    "none_list"
+    "zero_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "  * { box-sizing: border-box; }\n",
+    "  h1 { width: 100%; text-align: center; color: #ffffff; font-size: 2.8rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card { background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70)); border-radius: 15px; padding: 2rem; margin: 0 auto 2.5rem; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); width: 100%; max-width: min(1200px, 95vw); }\n",
+    "  .section-card h2, .card h3 { color: #ffffff; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card h2 { text-align: center; font-size: 1.8rem; margin-bottom: 1.5rem; }\n",
+    "  .card h3 { font-size: 1.3rem; margin-bottom: 0.75rem; font-weight: bold; }\n",
+    "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
+    "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid transparent; width: min(1000px, 90vw); margin: 0 auto 1.25rem; transition: transform 0.3s ease, box-shadow 0.3s ease; }\n",
+    "  .card:hover { transform: translateY(-6px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); }\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
+    "  .card.orange { border-left-color: #ffa726; }\n",
+    "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
+    "  blockquote { border-left: 3px solid #66bb6a; padding-left: 1rem; margin-left: 0; color: #f0f0f0; font-style: italic; }\n",
+    "  @media (max-width: 768px) { h1 { font-size: 2rem; } .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } .section-card h2 { font-size: 1.4rem; } p { font-size: 0.9rem; } }\n",
+    "</style>\n",
+    "<div class=\"section-card\">\n",
+    "  <div class=\"container\">\n",
+    "    <div class=\"card orange\" id=\"toc1_5_\">\n",
+    "      <h3>Creating Lists with Range</h3>\n",
+    "      <p>The <code>range()</code> function can be used in combination with the <code>list()</code> constructor to create lists of numbers that follow a specific pattern. You will learn more about the <code>range()</code> function in the next sections, but for now, let’s see how to create lists with it:\n",
+    "</p>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>"
    ]
   },
   {
@@ -252,16 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numbers = [3, 5, 1, 2, 4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +530,7 @@
        "4"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,6 +538,35 @@
    "source": [
     "fruits = ['apple', 'banana', 'cherry', 'orange']\n",
     "len(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [3, 5, 1, 2, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(numbers)"
    ]
   },
   {
@@ -302,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +600,7 @@
        "15"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +639,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -364,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
