--- a/03 Data Type/26 Dictionary Manipulation and Practival Uses.ipynb
+++ b/03 Data Type/26 Dictionary Manipulation and Practival Uses.ipynb
@@ -65,7 +65,7 @@
     "      <ul>\n",
     "        <li><a href=\"#toc1_\">Dictionary Operators</a>\n",
     "          <ul>\n",
-    "            <li><a href=\"#toc1_1_\">Membership Operator (`in` and `not in`)</a></li>\n",
+    "            <li><a href=\"#toc1_1_\">Membership Operator (<code>in</code> and <code>not in</code>)</a></li>\n",
     "            <li><a href=\"#toc1_2_\">Concatenation and Multiplication Operator</a></li>\n",
     "          </ul>\n",
     "        </li>\n",
@@ -714,9 +714,18 @@
     "    'parent1': {'name': 'John', 'age': 42},\n",
     "    'parent2': {'name': 'Jane', 'age': 40},\n",
     "    'child': {'name': 'Doe', 'age': 18}\n",
-    "}\n",
-    "\n",
-    "family_ages['parent1']['name']"
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accessing nested dictionary values\n",
+    "parent1_name = family_ages['parent1']['name']\n",
+    "parent1_name"
    ]
   },
   {
