--- a/01 introduction/02 Introduction Environments.ipynb
+++ b/01 introduction/02 Introduction Environments.ipynb
@@ -29,7 +29,7 @@
     "    font-family: 'Poppins', sans-serif;\n",
     "    letter-spacing: 1px;\n",
     "  }\n",
-    "\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
     "  .container {\n",
     "    display: flex;\n",
     "    flex-direction: column;\n",
@@ -85,8 +85,10 @@
     "  }\n",
     "\n",
     "  ul {\n",
+    "    list-style-type:none;\n",
     "    padding-left: 1.25rem;\n",
     "    margin-bottom: 0.75rem;\n",
+    "\n",
     "  }\n",
     "\n",
     "  li {\n",
@@ -124,6 +126,10 @@
     "\n",
     "  .card.purple {\n",
     "    border-left-color: #ba68c8;\n",
+    "  }\n",
+    "\n",
+    "  .card.red {\n",
+    "    border-left-color: #ef5350;\n",
     "  }\n",
     "\n",
     "  @media (max-width: 768px) {\n",
@@ -184,19 +190,62 @@
     "<div class=\"section-card\">\n",
     "  <h1>Introduction to Python Development Environment</h1>\n",
     "</div>\n",
+    "<div class=\"section-card\" id=\"toc0_\">\n",
+    "  <h2>Table of contents</h2>\n",
+    "  <div class=\"container\">\n",
+    "    <div class=\"card blue toc-card\">\n",
+    "    <ul>\n",
+    "        <li><a href=\"#toc1_\">Python Development Environment</a>\n",
+    "          <ul>\n",
+    "            <li><a href=\"#toc1_1_\">Definition</a></li>\n",
+    "            <li><a href=\"#toc1_2_\">Components</a></li>\n",
+    "          </ul>\n",
+    "        </li>\n",
+    "        <li><a href=\"#toc2_\">VS Code (Visual Studio Code)</a>\n",
+    "          <ul>\n",
+    "            <li><a href=\"#toc2_1_\">Definition</a></li>\n",
+    "            <li><a href=\"#toc2_2_\">Features</a></li>\n",
+    "          </ul>\n",
+    "        </li>\n",
+    "        <li><a href=\"#toc3_\">Jupyter Notebook</a>\n",
+    "          <ul>\n",
+    "            <li><a href=\"#toc3_1_\">Definition</a></li>\n",
+    "            <li><a href=\"#toc3_2_\">Use Cases</a></li>\n",
+    "            <li><a href=\"#toc3_3_\">Integration with VS Code</a></li>\n",
+    "          </ul>\n",
+    "        </li>\n",
+    "        <li><a href=\"#toc4_\">Conda</a>\n",
+    "          <ul>\n",
+    "            <li><a href=\"#toc4_1_\">Definition</a></li>\n",
+    "            <li><a href=\"#toc4_2_\">Functionality</a></li>\n",
+    "          </ul>\n",
+    "        </li>\n",
+    "        <li><a href=\"#toc5_\">Benefits of Using VS Code, Jupyter Notebook, and Conda Together</a>\n",
+    "          <ul>\n",
+    "            <li><a href=\"#toc5_1_\">Tool Integration</a></li>\n",
+    "            <li><a href=\"#toc5_2_\">Seamless Integration</a></li>\n",
+    "            <li><a href=\"#toc5_2_\">Enhanced Productivity</a></li>\n",
+    "            <li><a href=\"#toc5_2_\">Flexible Collaboration</a></li>\n",
+    "            <li><a href=\"#toc5_2_\">Scalability and Reproducibility</a></li>\n",
+    "          </ul>\n",
+    "        </li>\n",
+    "      </ul>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>\n",
     "<!-- Section 1: Python Development Environment -->\n",
-    "<div class=\"section-card\">\n",
+    "<div class=\"section-card\" id=\"toc1_\">\n",
     "  <h2>Python Development Environment</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
+    "    <div class=\"card image-card orange\">\n",
     "      <h3>Overview</h3>\n",
     "      <img src=\"https://cdn.open-pr.com/V/c/Vc26705758_g.jpg\" alt=\"Python Development Environment\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card orange\" id=\"toc1_1_\">\n",
     "      <h3>Definition</h3>\n",
     "      <p>The Python development environment refers to the set of tools and software configurations required to write, run, debug, and manage Python code efficiently.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card orange\" id=\"toc1_2_\">\n",
     "      <h3>Components</h3>\n",
     "      <p>It encompasses text editors or integrated development environments (IDEs), package managers, and other supporting tools that enhance the development workflow.</p>\n",
     "    </div>\n",
@@ -204,18 +253,18 @@
     "</div>\n",
     "\n",
     "<!-- Section 2: VS Code (Visual Studio Code) -->\n",
-    "<div class=\"section-card\">\n",
+    "<div class=\"section-card\" id=\"toc2_\">\n",
     "  <h2>VS Code (Visual Studio Code)</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
+    "    <div class=\"card image-card purple\">\n",
     "      <h3>VS Code Interface</h3>\n",
     "      <img src=\"../images/python-vscode.png\" alt=\"VS Code Interface\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card purple\" id=\"toc2_1_\">\n",
     "      <h3>Definition</h3>\n",
     "      <p>VS Code is a lightweight and highly customizable code editor developed by Microsoft.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card purple\" id=\"toc2_2_\">\n",
     "      <h3>Features</h3>\n",
     "      <p>It offers robust features for Python development, including syntax highlighting, code completion, debugging support, version control integration, and extensibility through a wide range of extensions.</p>\n",
     "    </div>\n",
@@ -223,22 +272,22 @@
     "</div>\n",
     "\n",
     "<!-- Section 3: Jupyter Notebook -->\n",
-    "<div class=\"section-card\">\n",
+    "<div class=\"section-card\" id=\"toc3_\">\n",
     "  <h2>Jupyter Notebook</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
+    "    <div class=\"card image-card red\">\n",
     "      <h3>Jupyter Interface</h3>\n",
     "      <img src=\"../images/jupyter-interface.png\" alt=\"Jupyter Notebook Interface\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card red\" id=\"toc3_1_\">\n",
     "      <h3>Definition</h3>\n",
     "      <p>Jupyter Notebook is an interactive computing environment that allows users to create and share documents containing live code, visualizations, explanatory text, and more.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card red\" id=\"toc3_2_\">\n",
     "      <h3>Use Cases</h3>\n",
     "      <p>It is particularly useful for data analysis, exploratory programming, and documentation purposes.</p>\n",
     "    </div>\n",
-    "    <div class=\"card purple\">\n",
+    "    <div class=\"card red\" id=\"toc3_3_\">\n",
     "      <h3>Integration with VS Code</h3>\n",
     "      <p>The Jupyter Notebook extension enables seamless integration with VS Code, allowing you to create, edit, and run Jupyter notebooks directly within the editor with features like cell execution, interactive outputs, and markdown rendering.</p>\n",
     "    </div>\n",
@@ -249,18 +298,18 @@
     "</div>\n",
     "\n",
     "<!-- Section 4: Conda -->\n",
-    "<div class=\"section-card\">\n",
+    "<div class=\"section-card\" id=\"\"toc4_>\n",
     "  <h2>Conda</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card image-card green\">\n",
     "      <h3>Conda Overview</h3>\n",
     "      <img src=\"../images/conda-python.jpg\" alt=\"Conda Environment\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card green\" id=\"\"toc4_1_>\n",
     "      <h3>Definition</h3>\n",
     "      <p>Conda is a popular package manager and environment management system for Python and other programming languages.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card green\" id=\"\"toc4_2_>\n",
     "      <h3>Functionality</h3>\n",
     "      <p>It simplifies the process of installing, managing, and organizing packages and dependencies within isolated environments, ensuring reproducibility and avoiding conflicts between different projects.</p>\n",
     "    </div>\n",
@@ -268,26 +317,26 @@
     "</div>\n",
     "\n",
     "<!-- Section 5: Benefits of Using VS Code, Jupyter Notebook, and Conda Together -->\n",
-    "<div class=\"section-card\">\n",
+    "<div class=\"section-card\" id=\"toc5_\">\n",
     "  <h2>Benefits of Using VS Code, Jupyter Notebook, and Conda Together</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
+    "    <div class=\"card image-card blue\">\n",
     "      <h3>Tool Integration</h3>\n",
     "      <img src=\"../images/python-vscode.png\" alt=\"Tool Integration\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card blue\">\n",
+    "    <div class=\"card blue\" id=\"toc5_1_\">\n",
     "      <h3>Seamless Integration</h3>\n",
     "      <p>VS Code provides a powerful interface for editing Python code, Jupyter Notebook offers interactive development, and Conda manages packages in isolated environments for consistent setups.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\">\n",
+    "    <div class=\"card blue\" id=\"toc5_2_\">\n",
     "      <h3>Enhanced Productivity</h3>\n",
     "      <p>VS Code’s features like code snippets, autocompletion, and debugging, combined with Jupyter’s interactive prototyping, boost developer productivity.</p>\n",
     "    </div>\n",
-    "    <div class=\"card purple\">\n",
+    "    <div class=\"card blue\" id=\"toc5_3_\">\n",
     "      <h3>Flexible Collaboration</h3>\n",
     "      <p>VS Code supports version control for collaboration, and Jupyter Notebook files can be shared easily for effective data analysis workflows.</p>\n",
     "    </div>\n",
-    "    <div class=\"card green\">\n",
+    "    <div class=\"card blue\" id=\"toc5_4_\">\n",
     "      <h3>Scalability and Reproducibility</h3>\n",
     "      <p>Conda’s environment management ensures reproducibility across machines, simplifying deployment and scalability.</p>\n",
     "    </div>\n",
