--- a/03 Data Type/12 Object in Python.ipynb
+++ b/03 Data Type/12 Object in Python.ipynb
@@ -11,7 +11,7 @@
     "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
     "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid #66bb6a; width: min(1000px, 90vw); margin: 0 auto 1.25rem; }\n",
     "  .container > .card:last-child { margin-bottom: 2rem; }\n",
-    "  .card.blue { border-left-color: #29b6f6; }\n",
+    "  .card.blue { border-left-color:rgb(41, 246, 41); }\n",
     "  .card:hover {transform: translateY(-6px);box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);}\n",
     "  .card {transition: transform 0.3s ease, box-shadow 0.3s ease;}\n",
     "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
@@ -44,7 +44,7 @@
     "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
     "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid #66bb6a; width: min(1000px, 90vw); margin: 0 auto 1.25rem; }\n",
     "  .container > .card:last-child { margin-bottom: 2rem; }\n",
-    "  .card.orange { border-left-color: #ffa726; }\n",
+    "  .card.blue { border-left-color: #29b6f6; }\n",
     "  .card:hover {transform: translateY(-6px);box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);}\n",
     "  .card {transition: transform 0.3s ease, box-shadow 0.3s ease;}\n",
     "  li { margin-bottom: 0.5rem; color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; }\n",
@@ -57,7 +57,7 @@
     "<div class=\"section-card\">\n",
     "  <h2>Table of contents</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card orange toc-card\">\n",
+    "    <div class=\"card blue toc-card\">\n",
     "      <ul>\n",
     "        <li><a href=\"#toc1_\">Diving into Object References</a>\n",
     "          <ul>\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,9 @@
    "metadata": {},
    "source": [
     "<style>\n",
-    "  * { box-sizing: border-box; }\n",
+    "  * { box-sizing: border-box; }.section-card { background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70)); border-radius: 15px; padding: 2rem; margin: 0 auto 2.5rem; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); width: 100%; max-width: min(1200px, 95vw); }\n",
+    "  .section-card h2, .card h3 { color: #ffffff; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card h2 { text-align: center; font-size: 1.8rem; margin-bottom: 1.5rem; }\n",
     "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
     "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid #66bb6a; width: min(1000px, 90vw); margin: 0 auto 1.25rem; }\n",
     "  .container > .card:last-child { margin-bottom: 2rem; }\n",
@@ -138,16 +140,18 @@
     "  img { max-width: 400px; height: auto; display: block; margin: 10px auto; border-radius: 5px; }\n",
     "  @media (max-width: 768px) { .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } }\n",
     "</style>\n",
+    "<div class=\"section-card\">\n",
     "<div class=\"container\">\n",
     "    <div class=\"card purple\">\n",
     "        <img src=\"../images/1.png\" width=\"400\">\n",
+    "    </div>\n",
     "    </div>\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +163,9 @@
    "metadata": {},
    "source": [
     "<style>\n",
-    "  * { box-sizing: border-box; }\n",
+    "  * { box-sizing: border-box; }.section-card { background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70)); border-radius: 15px; padding: 2rem; margin: 0 auto 2.5rem; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); width: 100%; max-width: min(1200px, 95vw); }\n",
+    "  .section-card h2, .card h3 { color: #ffffff; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card h2 { text-align: center; font-size: 1.8rem; margin-bottom: 1.5rem; }\n",
     "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
     "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid #66bb6a; width: min(1000px, 90vw); margin: 0 auto 1.25rem; }\n",
     "  .container > .card:last-child { margin-bottom: 2rem; }\n",
@@ -169,10 +175,12 @@
     "  img { max-width: 400px; height: auto; display: block; margin: 10px auto; border-radius: 5px; }\n",
     "  @media (max-width: 768px) { .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } }\n",
     "</style>\n",
-    "<div class=\"container\">\n",
+    "<div class=\"section-card\">\n",
+    "  <div class=\"container\">\n",
     "    <div class=\"card purple\">\n",
     "        <img src=\"../images/2.png\" width=\"400\">\n",
     "    </div>\n",
+    "  </div>\n",
     "</div>"
    ]
   },
@@ -216,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,16 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +264,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +290,7 @@
     "  .card {transition: transform 0.3s ease, box-shadow 0.3s ease;}\n",
     "  .container > .card:last-child { margin-bottom: 2rem; }\n",
     "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
-    "  img { max-width: 500px; height: auto; display: block; margin: 10px auto; border-radius: 5px; }\n",
+    "  img { display: block; max-width: 50vw; height: auto; margin: 0 auto; border-radius: 10px; }\n",
     "  @media (max-width: 768px) { .section-card { padding: 1.25rem; max-width: 95vw; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } h2 { font-size: 1.4rem; } p { font-size: 0.9rem; } }\n",
     "</style>\n",
     "<div class=\"section-card\" id=\"toc3_\">\n",
@@ -291,13 +299,89 @@
     "    <div class=\"card\">\n",
     "      <h3>Confusing 'is' with '=='</h3>\n",
     "      <p><strong>Best Practice:</strong> Use <code>is</code> only when you need to check if two variables point to the exact same object. For comparing the actual content or value of variables, always use <code>==</code>.</p>\n",
-    "      <img src=\"../images/4.png\" width=\"500\">\n",
+    "      <img src=\"../images/4.png\">\n",
     "    </div>\n",
     "    <div class=\"card\">\n",
     "       <h3>Not Understanding Variable References</h3>\n",
     "       <p><strong>Pitfall:</strong> Assigning one variable to another (e.g., <code>b = a</code>) does not create a new object. It creates a new reference pointing to the same object.</p>\n",
     "       <p><strong>Best Practice:</strong> If you need a separate copy of an object, you must explicitly create one. For complex objects like lists, this often involves using methods like <code>.copy()</code>, which will be covered later.</p>\n",
-    "       <img src=\"../images/3.png\" width=\"400\">\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 10\n",
+    "b = a\n",
+    "c = b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a is b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b is c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "  * { box-sizing: border-box; }.section-card { background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70)); border-radius: 15px; padding: 2rem; margin: 0 auto 2.5rem; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); width: 100%; max-width: min(1200px, 95vw); }\n",
+    "  .section-card h2, .card h3 { color: #ffffff; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card h2 { text-align: center; font-size: 1.8rem; margin-bottom: 1.5rem; }\n",
+    "  .container { display: flex; flex-direction: column; gap: 1.25rem; align-items: center; }\n",
+    "  .card { background: linear-gradient(145deg, #24243e, #1e1e3a); border-radius: 12px; padding: 1.5rem; box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); border-left: 4px solid #66bb6a; width: min(1000px, 90vw); margin: 0 auto 1.25rem; }\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
+    "  .card.purple { border-left-color: #ba68c8; }\n",
+    "  .card:hover {transform: translateY(-6px);box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);}\n",
+    "  .card {transition: transform 0.3s ease, box-shadow 0.3s ease;}\n",
+    "  img { max-width: 400px; height: auto; display: block; margin: 10px auto; border-radius: 5px; }\n",
+    "  @media (max-width: 768px) { .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } }\n",
+    "</style>\n",
+    "<div class=\"section-card\">\n",
+    "  <div class=\"container\">\n",
+    "    <div class=\"card purple\">\n",
+    "        <img src=\"../images/3.png\" width=\"400\">\n",
     "    </div>\n",
     "  </div>\n",
     "</div>"
@@ -340,7 +424,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -354,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
