--- a/03 Data Type/13 Strings.ipynb
+++ b/03 Data Type/13 Strings.ipynb
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"Mohammad Shafiee\""
+    "name = \"Mohammad Amin\""
    ]
   },
   {
@@ -185,7 +185,7 @@
     {
      "data": {
       "text/plain": [
-       "'Mohammad Shafiee'"
+       "'Mohammad Amin'"
       ]
      },
      "execution_count": 2,
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
      "evalue": "unterminated string literal (detected at line 2) (1239820130.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[5], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    'It's a beautiful day!'\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 2)\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    'It's a beautiful day!'\u001b[0m\n\u001b[1;37m                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 2)\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "\"It's a beautiful day!\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
