--- a/03 Data Type/16 Basics of Input and Output.ipynb
+++ b/03 Data Type/16 Basics of Input and Output.ipynb
@@ -15,6 +15,8 @@
     "  .container > .card:last-child { margin-bottom: 2rem; }\n",
     "  .card.green { border-left-color: #66bb6a; }\n",
     "  p { color: #dcdcdc; font-size: 0.95rem; line-height: 1.5; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.75rem; }\n",
+    "  ul { padding-left: 1.25rem; margin-bottom: 0; color: #dcdcdc; font-size: 0.95rem; }\n",
+    "  li { margin-bottom: 0.5rem; }\n",
     "  @media (max-width: 768px) { h1 { font-size: 2rem; } .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } p { font-size: 0.9rem; } }\n",
     "</style>\n",
     "\n",
@@ -60,10 +62,10 @@
     "    <div class=\"card blue toc-card\">\n",
     "      <ul>\n",
     "        <li><a href=\"#toc1_\">Reading Input From the Keyboard</a>\n",
-    "          <ul><li><a href=\"#toc1_1_\">The `input()` Function</a></li></ul>\n",
+    "          <ul><li><a href=\"#toc1_1_\">The <code>input()</code> Function</a></li></ul>\n",
     "        </li>\n",
     "        <li><a href=\"#toc2_\">Writing Output to the Console</a>\n",
-    "          <ul><li><a href=\"#toc2_1_\">The Basic `print()` Function</a></li></ul>\n",
+    "          <ul><li><a href=\"#toc2_1_\">The Basic <code>print()</code> Function</a></li></ul>\n",
     "        </li>\n",
     "      </ul>\n",
     "    </div>\n",
@@ -95,7 +97,7 @@
     "  <h2>Reading Input From the Keyboard</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card orange\" id=\"toc1_1_\">\n",
-    "      <h3>The `input()` Function</h3>\n",
+    "      <h3>The <code>input()</code> Function</h3>\n",
     "      <p>Python's built-in <code>input()</code> function captures user information from the keyboard. When called, the program pauses and waits for the user to type text and press Enter. The entered text is always returned as a string.</p>\n",
     "      <p>You can provide a prompt to the user by passing a string to the function, for example: <code>name = input(\"What's your name? \")</code>.</p>\n",
     "      <p style=\"margin-bottom:0;\">Since <code>input()</code> always returns a string, you must convert the result to a different type (like <code>int()</code> or <code>float()</code>) if you need to perform numeric operations on it.</p>\n",
@@ -106,25 +108,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# By running this code, python will ask you to input a string\n",
     "name = input(\"What's your name? \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Nika'"
+       "'Mohammad'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,25 +138,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "age = int(input(\"How old are you? \"))"
+    "age = input(\"How old are you? \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "int"
+       "str"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +167,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = int(input(\"How old are you? \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +205,7 @@
        "25"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +238,7 @@
     "  <h2>Writing Output to the Console</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card purple\" id=\"toc2_1_\">\n",
-    "      <h3>The Basic `print()` Function</h3>\n",
+    "      <h3>The Basic <code>print()</code> Function</h3>\n",
     "      <p>The primary way to display information to the user in the console is with the versatile <code>print()</code> function. It can display various types of data by converting them to a string representation.</p>\n",
     "      <p style=\"margin-bottom:0;\">You can display multiple items by separating them with commas. By default, <code>print()</code> will insert a single space between each item.</p>\n",
     "    </div>\n",
@@ -216,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -268,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
