--- a/03 Data Type/17 String Formatting.ipynb
+++ b/03 Data Type/17 String Formatting.ipynb
@@ -56,7 +56,7 @@
     "    <div class=\"card blue toc-card\">\n",
     "      <ul>\n",
     "        <li><a href=\"#toc1_\">Introduction to String Formatting</a></li>\n",
-    "        <li><a href=\"#toc2_\">The `.format()` Method</a></li>\n",
+    "        <li><a href=\"#toc2_\">The <code>.format()</code> Method</a></li>\n",
     "        <li><a href=\"#toc3_\">Introducing f-strings</a></li>\n",
     "        <li><a href=\"#toc4_\">Comparing .format() and f-strings</a></li>\n",
     "        <li><a href=\"#toc5_\">Conclusion</a></li>\n",
@@ -115,7 +115,7 @@
     "  @media (max-width: 768px) { h1 { font-size: 2rem; } .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } .section-card h2 { font-size: 1.4rem; } p { font-size: 0.9rem; } }\n",
     "</style>\n",
     "<div class=\"section-card\" id=\"toc2_\">\n",
-    "  <h2>The `.format()` Method</h2>\n",
+    "  <h2>The <code>.format()</code> Method</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card purple\">\n",
     "      <p>The <code>.format()</code> method is a versatile and powerful way to embed values into string placeholders. It was the standard method for formatting before the introduction of f-strings in Python 3.6.</p>\n",
@@ -126,6 +126,23 @@
     "    </div>\n",
     "  </div>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Basic Usage**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "greeting = \"Hello, {}\"\n",
+    "name = \"Alice\""
    ]
   },
   {
@@ -145,9 +162,23 @@
     }
    ],
    "source": [
-    "greeting = \"Hello, {}\"\n",
-    "name = \"Alice\"\n",
     "greeting.format(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Named Placeholders**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template = 'Hey {name}, are you {age} years old?'"
    ]
   },
   {
@@ -167,7 +198,6 @@
     }
    ],
    "source": [
-    "template = 'Hey {name}, are you {age} years old?'\n",
     "template.format(name=\"ali\", age=30)"
    ]
   },
@@ -206,6 +236,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Basic Usage**:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -225,6 +262,13 @@
     "name = \"ali\"\n",
     "age = 22\n",
     "f\"My name is {name} and I am {age} years old.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Calculations Inside f-strings**:"
    ]
   },
   {
@@ -328,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
