--- a/03 Data Type/24 Dictionary.ipynb
+++ b/03 Data Type/24 Dictionary.ipynb
@@ -194,7 +194,7 @@
     "  <h2>Creating Dictionaries in Python</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card green\" id=\"toc4_1_\">\n",
-    "      <h3>Basic Syntax</h3>\n",
+    "      <h3>Basic Syntax for Dictionary Creation</h3>\n",
     "      <p>A dictionary is defined with curly braces <code>{}</code> containing key-value pairs separated by colons (e.g., <code>{'key': 'value'}</code>). Each pair is separated by a comma.</p>\n",
     "    </div>\n",
     "  </div>\n",
@@ -294,7 +294,7 @@
     "<div class=\"section-card\">\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card green\" id=\"toc4_3_\">\n",
-    "       <h3>Initialization with Values</h3>\n",
+    "       <h3>Dictionary Initialization with Values</h3>\n",
     "       <p>Besides direct initialization (<code>{'key': 'value'}</code>), you can also use the <code>dict()</code> constructor. It can accept a sequence of key-value pairs (like a list of tuples) or keyword arguments.</p>\n",
     "    </div>\n",
     "  </div>\n",
@@ -309,6 +309,13 @@
    "source": [
     "# Direct initialization with key-value pairs\n",
     "credentials = {'username': 'user123', 'password': 'securepass'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Using `dict()` Constructor**"
    ]
   },
   {
@@ -381,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +426,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "maa",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -433,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
